# Challenge-Cup

./: 边端项目状态报告_2026-07-20.md  预处理报告.md
competition-main/: .gitignore
competition-main/hhk/: CMakeLists.txt  EDGE_PIPELINE_STATUS.md  GAP_ANALYSIS.md  MODEL_SELECTION_REPORT.md  demo_results.json  edge_run.py  edge_run_hydraulic_inputs.json  edge_run_results.json  processed_hydraulic_inputs.json  processed_industrial_inspection_v1_inputs.json  processed_motor_inputs.json  processed_motor_inputs_edge_sim.json  processed_motor_inputs_split_meta.json  processed_motor_inputs_test.json  processed_motor_inputs_train.json  run_all.py  stream_adapter.py  stream_results.json  test_inputs_industrial_inspection_v1.json
competition-main/hhk/cloud_server/: config.py  main.py  requirements.txt
competition-main/hhk/demo/: demo_controller.py  run_demo.bat
competition-main/hhk/edge-gui/: CLOUD_EDGE_COMMUNICATION.md  CLOUD_EDGE_INTEGRATION_PLAN.md  CLOUD_EDGE_INTERFACE.md  CMakeLists.txt  IMPLEMENTATION_REPORT.md  README.md  TASK_COMPLETION_SUMMARY.md  app.cpp  app.h  cloud.cpp  cloud.h  conflict_detector.cpp  conflict_detector.h  device_monitor.cpp  device_monitor.h  edge_cloud.cpp  edge_cloud.h  edge_local_decision.cpp  edge_local_decision.h  engine.cpp  engine.h  file_dialog.cpp  file_dialog.h  heartbeat.cpp  heartbeat.h  main.cpp  media_source.cpp  media_source.h  model_sync.cpp  model_sync.h  p2p_mesh.cpp  p2p_mesh.h  task_scheduler.cpp  task_scheduler.h
competition-main/hhk/edge_preprocess/: datasets.py  features.py  schema.py  stream.py
competition-main/hhk/evaluation/: metrics_collector.py  report_generator.py
competition-main/hhk/preprocessing/: anomaly_injector.py  data_split.py  features_to_input.py  hydraulic_preprocess.py  motor_preprocess.py  sensor_csv_to_input.py
competition-main/hhk/results/: run_industrial_inspection_v1_20260720_204745.json  run_industrial_inspection_v1_20260720_204745_meta.json  run_industrial_inspection_v1_20260720_211625.json  run_industrial_inspection_v1_20260720_211625_meta.json  run_industrial_inspection_v1_20260720_212432.json  run_industrial_inspection_v1_20260720_212559.json  run_industrial_inspection_v1_20260720_212559_meta.json  run_industrial_inspection_v1_20260720_212955.json  run_industrial_inspection_v1_20260720_212955_meta.json  (+2 more)
edge-io-protocol/: README.md  edge_inference.py  task_types.json
edge-io-protocol/grammars/: short_decision.gbnf
edge-io-protocol/prompts/: data_analysis.txt  fault_diagnosis.txt  quality_inspection.txt  safety_check.txt  status_monitoring.txt
edge-io-protocol/schemas/: cloud_escalation.json  input.json  output.json
(+25 files in other folders)
